fix date wrapping issue on education, fix applied to all dates.

--- a/resume.css
+++ b/resume.css
@@ -187,6 +187,7 @@ div.title > span.title:not(:last-child)::after {
 .dates {
   display: flex;
   flex-direction: row;
+  white-space: nowrap;
 }
 
 .project {
